--- a/Core.DALC/QOfreces.WPF/MenuAdministrador.xaml
+++ b/Core.DALC/QOfreces.WPF/MenuAdministrador.xaml
@@ -12,27 +12,27 @@
         BorderBrush="{DynamicResource AccentColorBrush}"
         BorderThickness="1"
         mc:Ignorable="d"
-        Height="730" Width="700" Background="Black" WindowStartupLocation="CenterScreen" MinWidth="700" MinHeight="730" MaxWidth="700" MaxHeight="730" >
-        
-    <Grid>
-        <Controls:Tile x:Name="tiProducto" Background="Orange" Margin="8,67,544,510" TitleFontSize="12" Title="Mantenedor Producto" Height="Auto" Width="Auto" Click="tiProducto_Click">
+        Height="730" Width="804.5" Background="Black" WindowStartupLocation="CenterScreen" MinWidth="804.5" MinHeight="730" MaxWidth="804.5" MaxHeight="730" >
+
+    <Grid Margin="2,0,0,0">
+        <Controls:Tile x:Name="tiProducto" Background="Orange" Margin="8,67,649,510" TitleFontSize="12" Title="Mantenedor Producto" Height="Auto" Width="Auto" Click="tiProducto_Click">
             <Image x:Name="image3" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorProducto.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiUsuario" Background="Orange" Margin="8,192,544,385" TitleFontSize="12" Title="Mantenedor Usuario" Height="Auto" Width="Auto" Click="tiUsuario_Click">
+        <Controls:Tile x:Name="tiUsuario" Background="Orange" Margin="8,192,649,385" TitleFontSize="12" Title="Mantenedor Usuario" Height="Auto" Width="Auto" Click="tiUsuario_Click">
             <Image x:Name="image1" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorUsuario.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiEmpresa" Background="Orange" Margin="8,317,544,260" TitleFontSize="12" Title="Mantenedor Empresa" Height="Auto" Width="Auto" Click="tiEmpresa_Click">
+        <Controls:Tile x:Name="tiEmpresa" Background="Orange" Margin="8,317,649,260" TitleFontSize="12" Title="Mantenedor Empresa" Height="Auto" Width="Auto" Click="tiEmpresa_Click">
             <Image x:Name="image2" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorEmpresa.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiRubro" Background="Orange" Margin="8,442,544,135" TitleFontSize="12" Title="Mantenedor Rubro" Height="Auto" Width="Auto" Click="tiRubro_Click">
+        <Controls:Tile x:Name="tiRubro" Background="Orange" Margin="8,442,649,135" TitleFontSize="12" Title="Mantenedor Rubro" Height="Auto" Width="Auto" Click="tiRubro_Click">
             <Image x:Name="image4" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorRubro.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiReportes" Background="Orange" Margin="8,567,544,10" TitleFontSize="12" Title="Archivos BI" Height="Auto" Width="Auto" Click="tiReportes_Click">
+        <Controls:Tile x:Name="tiReportes" Background="Orange" Margin="8,567,649,10" TitleFontSize="12" Title="Archivos BI" Height="Auto" Width="Auto" Click="tiReportes_Click">
             <Image x:Name="image5" Height="100" Width="100" Stretch="Fill" Source="img/Report.png"/>
         </Controls:Tile>
-        <Grid HorizontalAlignment="Left" Height="697" Margin="153,0,0,0" VerticalAlignment="Top" Width="537">
-            <Controls:Flyout x:Name="flyProductos" Position="Right" Header="Mantenedor de productos" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="538" Margin="-1,0,0,0">
-                <Grid HorizontalAlignment="Left" Height="619" Margin="10,0,0,0" Width="518">
+        <Grid HorizontalAlignment="Left" Height="697" Margin="153,0,0,0" VerticalAlignment="Top" Width="647">
+            <Controls:Flyout x:Name="flyProductos" Position="Right" Header="Mantenedor de productos" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="645">
+                <Grid HorizontalAlignment="Left" Height="618" Margin="10,0,0,0" Width="634">
                     <Controls:MetroTabControl Name="tcMain">
                         <Controls:MetroTabItem Header="Agregar" x:Name="tbProdA" Foreground="White">
 
@@ -110,7 +110,7 @@
                     </Controls:MetroTabControl>
                 </Grid>
             </Controls:Flyout>
-            <Controls:Flyout x:Name="flyUsuarios" Position="Right" Header="Mantenedor de usuarios" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="538" Margin="-1,0,0,0">
+            <Controls:Flyout x:Name="flyUsuarios" Position="Right" Header="Mantenedor de usuarios" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="645">
                 <Controls:MetroTabControl>
                     <Controls:MetroTabItem Header="Agregar">
                         <Grid>
@@ -177,7 +177,7 @@
                             <CheckBox x:Name="chActivarUM" IsChecked="false" Content="Usuario activo" Foreground="White" HorizontalAlignment="Left" Margin="14,268,0,0" VerticalAlignment="Top" TabIndex="13"/>
                             <RadioButton x:Name="rbFemUM" IsChecked="True" Content="Femenino" Foreground="White" GroupName="Sexo" HorizontalAlignment="Left" Margin="14,303,0,0" VerticalAlignment="Top" TabIndex="14"/>
                             <RadioButton x:Name="rbMasUM" Content="Masculino" Foreground="White" GroupName="Sexo" HorizontalAlignment="Left" Margin="14,328,0,0" VerticalAlignment="Top" TabIndex="15"/>
-                            <Button x:Name="btnAgregarUM" Content="Agregar" HorizontalAlignment="Left" Margin="453,9,0,0" VerticalAlignment="Top" Width="75"  TabIndex="16"/>
+                            <Button x:Name="btnAgregarUM" Content="Modificar" HorizontalAlignment="Left" Margin="453,9,0,0" VerticalAlignment="Top" Width="75"  TabIndex="16"/>
                             <Label x:Name="lblApellidoUM" Content="Apellido:" HorizontalAlignment="Left" Margin="422,380,0,0" VerticalAlignment="Top"   Foreground="White" />
                             <Label x:Name="lblRutUM" Content="Rut:" HorizontalAlignment="Left" Margin="247,380,0,0" VerticalAlignment="Top"   Foreground="White" />
                             <Label x:Name="lblEmailUM" Content="Email:" HorizontalAlignment="Left" Margin="72,380,0,0" VerticalAlignment="Top"   Foreground="White" />
@@ -223,7 +223,7 @@
                             <CheckBox x:Name="chActivarUE" IsChecked="false" Content="Usuario activo" Foreground="White" HorizontalAlignment="Left" Margin="14,268,0,0" VerticalAlignment="Top" TabIndex="13"/>
                             <RadioButton x:Name="rbFemUE" IsChecked="True" Content="Femenino" Foreground="White" GroupName="Sexo" HorizontalAlignment="Left" Margin="14,303,0,0" VerticalAlignment="Top" TabIndex="14"/>
                             <RadioButton x:Name="rbMasUE" Content="Masculino" Foreground="White" GroupName="Sexo" HorizontalAlignment="Left" Margin="14,328,0,0" VerticalAlignment="Top" TabIndex="15"/>
-                            <Button x:Name="btnAgregarUE" Content="Agregar" HorizontalAlignment="Left" Margin="453,9,0,0" VerticalAlignment="Top" Width="75"  TabIndex="16"/>
+                            <Button x:Name="btnAgregarUE" Content="Eliminar" HorizontalAlignment="Left" Margin="453,9,0,0" VerticalAlignment="Top" Width="75"  TabIndex="16"/>
                             <Label x:Name="lblApellidoUE" Content="Apellido:" HorizontalAlignment="Left" Margin="422,380,0,0" VerticalAlignment="Top"   Foreground="White" />
                             <Label x:Name="lblRutUE" Content="Rut:" HorizontalAlignment="Left" Margin="247,380,0,0" VerticalAlignment="Top"   Foreground="White" />
                             <Label x:Name="lblEmailUE" Content="Email:" HorizontalAlignment="Left" Margin="72,380,0,0" VerticalAlignment="Top"   Foreground="White" />
@@ -237,7 +237,7 @@
                     </Controls:MetroTabItem>
                 </Controls:MetroTabControl>
             </Controls:Flyout>
-            <Controls:Flyout x:Name="FlyRetail" Position="Right" Header="Mantenedor Retail" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="538">
+            <Controls:Flyout x:Name="FlyRetail" Position="Right" Header="Mantenedor Retail" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="649" Margin="-2,0,0,0">
                 <Controls:MetroTabControl>
                     <Controls:MetroTabItem Header="Agregar">
                         <Grid>
@@ -333,7 +333,7 @@
                     </Controls:MetroTabItem>
                 </Controls:MetroTabControl>
             </Controls:Flyout>
-            <Controls:Flyout x:Name="FlyRubro" Position="Right" Header="Mantenedor Rubro" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="538">
+            <Controls:Flyout x:Name="FlyRubro" Position="Right" Header="Mantenedor Rubro" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="647">
                 <Controls:MetroTabControl>
                     <Controls:MetroTabItem Header="Agregar">
                         <Grid>
@@ -385,7 +385,7 @@
                     </Controls:MetroTabItem>
                 </Controls:MetroTabControl>
             </Controls:Flyout>
-            <Controls:Flyout x:Name="FlyBI" Position="Right" Header="Business Intelligence" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="538" Margin="-1,0,0,0">
+            <Controls:Flyout x:Name="FlyBI" Position="Right" Header="Business Intelligence" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="647">
                 <Controls:MetroTabControl>
                     <Controls:MetroTabItem Header="Reporte de movimientos" Margin="0,0,-4,0">
                         <Grid Margin="5,76,5,10">
@@ -396,7 +396,7 @@
                     </Controls:MetroTabItem>
                 </Controls:MetroTabControl>
             </Controls:Flyout>
-            <Controls:Flyout x:Name="FlyPerfil" Position="Right" Header="Perfil Usuario" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="538" Margin="-1,0,0,0">
+            <Controls:Flyout x:Name="FlyPerfil" Position="Right" Header="Perfil Usuario" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="646">
                 <Grid>
                     <Label x:Name="label" Content="Datos Personales" Foreground="White" HorizontalAlignment="Left" Margin="20,14,0,0" VerticalAlignment="Top"/>
                     <Label x:Name="label_Copy" Foreground="White" HorizontalAlignment="Left" Margin="159,197,0,0" VerticalAlignment="Top"/>
@@ -417,7 +417,7 @@
                 </Grid>
             </Controls:Flyout>
         </Grid>
-        <Button x:Name="btnPerfil" Background="Orange" HorizontalAlignment="Left" Margin="72,26,0,0" VerticalAlignment="Top" Width="75" Height="36" BorderThickness="0" MinHeight="0" Padding="0" Click="btnPerfil_Click">
+        <Button x:Name="btnPerfil" Background="Orange" HorizontalAlignment="Left" Margin="68,26,0,0" VerticalAlignment="Top" Width="75" Height="36" BorderThickness="0" MinHeight="0" Padding="0" Click="btnPerfil_Click">
             <Image Source="img/Perfil.png"  Height="40" Width="75"></Image>
         </Button>
         <Label x:Name="lblUsuarioActual" Content=" " Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" FontStyle="Italic" FontWeight="Bold"/>
