--- a/Core.DALC/QOfreces.WPF/MenuEncargado.xaml
+++ b/Core.DALC/QOfreces.WPF/MenuEncargado.xaml
@@ -12,27 +12,27 @@
         BorderBrush="{DynamicResource AccentColorBrush}"
         BorderThickness="1"
         mc:Ignorable="d"
-        x:Name="tituloEncargado"   Height="730" Width="700" Background="Black" WindowStartupLocation="CenterScreen" MinWidth="700" MinHeight="730" MaxWidth="700" MaxHeight="730">
+        x:Name="tituloEncargado"   Height="730" Width="850" Background="Black" WindowStartupLocation="CenterScreen" MinWidth="850" MinHeight="730" MaxWidth="850" MaxHeight="730">
 
     <Grid>
-        <Controls:Tile x:Name="tiConsultarOferta" Background="Orange" Margin="8,442,544,135" TitleFontSize="12" Title="Consultar oferta"  Height="Auto" Width="Auto" Click="tiConsultarOferta_Click">
+        <Controls:Tile x:Name="tiConsultarOferta" Background="Orange" Margin="8,442,692,135" TitleFontSize="12" Title="Consultar oferta"  Height="Auto" Width="Auto" Click="tiConsultarOferta_Click">
             <Image x:Name="image1" Height="100" Width="100" Source="img/Consultar.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiGenerarOferta" Background="Orange" Margin="8,66,544,511" TitleFontSize="12" Title="Generar oferta"  Width="Auto" Height="Auto" Click="tiGenerarOferta_Click">
+        <Controls:Tile x:Name="tiGenerarOferta" Background="Orange" Margin="8,66,692,511" TitleFontSize="12" Title="Generar oferta"  Width="Auto" Height="Auto" Click="tiGenerarOferta_Click">
             <Image x:Name="image2" Height="100" Width="100" Source="img/Generar.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiPublicarOferta" Background="Orange" Margin="8,191,544,386" TitleFontSize="12" Title="Publicar oferta" Height="Auto" Width="Auto" Click="tiPublicarOferta_Click">
+        <Controls:Tile x:Name="tiPublicarOferta" Background="Orange" Margin="8,191,692,386" TitleFontSize="12" Title="Publicar oferta" Height="Auto" Width="Auto" Click="tiPublicarOferta_Click">
             <Image x:Name="image" Height="100" Width="100" Source="img/Publicar.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiProducto" Background="Orange" Margin="8,317,544,260" TitleFontSize="12" Title="Mantenedor Producto"  Width="Auto" Height="Auto" Click="tiProducto_Click">
+        <Controls:Tile x:Name="tiProducto" Background="Orange" Margin="8,317,692,260" TitleFontSize="12" Title="Mantenedor Producto"  Width="Auto" Height="Auto" Click="tiProducto_Click">
             <Image x:Name="image3" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorProducto.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiReportes" Background="Orange" Margin="8,567,544,10" TitleFontSize="12" Title="Reportes de tienda" Height="Auto" Width="Auto" Click="tiReportes_Click" >
+        <Controls:Tile x:Name="tiReportes" Background="Orange" Margin="8,567,692,10" TitleFontSize="12" Title="Reportes de tienda" Height="Auto" Width="Auto" Click="tiReportes_Click" >
             <Image x:Name="image5" Height="100" Width="100" Stretch="Fill" Source="img/Report.png"/>
         </Controls:Tile>
         <Label x:Name="lblUsuarioActual" Content="" Foreground="White" HorizontalAlignment="Left" Margin="0,-2,0,0" VerticalAlignment="Top" FontStyle="Italic" RenderTransformOrigin="0.348,0.211" Width="118" FontWeight="Bold" FontSize="11"/>
         <Grid Margin="153,0,0,0">
-            <Controls:Flyout x:Name="flyGenerar" Position="Right" Header="Generar oferta" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="538" Margin="-1,0,0,0">
+            <Controls:Flyout x:Name="flyGenerar" Position="Right" Header="Generar oferta" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="688" Margin="-1,0,0,0">
                 <Grid>
                     <Button x:Name="btnGenOferta" Content="Generar Oferta" HorizontalAlignment="Left" Margin="400,0,0,0" VerticalAlignment="Top" Width="128" BorderBrush="Black" Height="27" RenderTransformOrigin="0.486,-0.635" Click="btnGenOferta_Click"/>
                     <DataGrid x:Name="dgProd" CanUserAddRows="False" HorizontalAlignment="Left" Margin="10,75,0,0" VerticalAlignment="Top" Height="140" Width="450"  AutoGenerateColumns="false">
@@ -74,7 +74,7 @@
                     <Label Content="Selecciona la o las sucursales" Foreground="White" HorizontalAlignment="Left" Margin="195,420,0,0" VerticalAlignment="Top" />
                 </Grid>
             </Controls:Flyout>
-            <Controls:Flyout x:Name="flyPublicar"  Position="Right" Header="Publicar ofertas" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="538" Margin="-1,0,0,0">
+            <Controls:Flyout x:Name="flyPublicar"  Position="Right" Header="Publicar ofertas" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="688" Margin="-1,0,0,0">
                 <Grid>
                     <Label Content="Busca en la lista y selecciona las ofertas que deseas activar o desactivar." Foreground="White" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" />
                     <Button x:Name="btnBusquedaPu" Content="Buscar" HorizontalAlignment="Left" Margin="10,51,0,0" VerticalAlignment="Top" Width="75" Click="btnBusquedaPu_Click" />
@@ -92,8 +92,8 @@
                     </DataGrid>
                 </Grid>
             </Controls:Flyout>
-            <Controls:Flyout x:Name="flyProductos" Position="Right" Header="Mantenedor de productos" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="538" Margin="-1,0,0,0">
-                <Grid HorizontalAlignment="Left" Height="619" Margin="10,0,0,0" Width="518">
+            <Controls:Flyout x:Name="flyProductos" Position="Right" Header="Mantenedor de productos" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="688" Margin="-1,0,0,0">
+                <Grid HorizontalAlignment="Left" Height="618" Margin="10,0,0,0" Width="678">
                     <Controls:MetroTabControl Name="tcMain">
                         <Controls:MetroTabItem Header="Agregar" Foreground="White">
                             <Grid>
@@ -168,7 +168,7 @@
                     </Controls:MetroTabControl>
                 </Grid>
             </Controls:Flyout>
-            <Controls:Flyout x:Name="flyConsultar" Position="Right" Header="Consultar ofertas" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="538" Margin="-1,0,0,0">
+            <Controls:Flyout x:Name="flyConsultar" Position="Right" Header="Consultar ofertas" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="688" Margin="-1,0,0,0">
                 <Grid>
                     <DataGrid x:Name="dgSucCO" HorizontalAlignment="Left" Margin="10,69,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.136,-0.68" Width="166" Height="131" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" CanUserResizeRows="False" CanUserResizeColumns="False">
                         <DataGrid.Columns>
@@ -201,13 +201,14 @@
                     <Label Content="Filtrar categoria" Foreground="White" HorizontalAlignment="Left" Margin="189,45,0,0" VerticalAlignment="Top" />
                 </Grid>
             </Controls:Flyout>
-            <Controls:Flyout x:Name="flyReportes" Position="Right" Header="Reporte de tienda" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="538" Margin="-1,0,0,0">
+            <Controls:Flyout x:Name="flyReportes" Position="Right" Header="Reporte de tienda" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="688" Margin="-1,0,0,0">
                 <Grid>
 
-                    <WindowsFormsHost Margin="9,55,11,24">
+                    <WindowsFormsHost Margin="0,55,0,24">
                         <rv:ReportViewer x:Name="_reportViewer"/>
                     </WindowsFormsHost>
-                    <!--<Button x:Name="btnReporte" Content="Reporte" HorizontalAlignment="Left" Margin="461,10,0,0" VerticalAlignment="Top" Width="74" />
+                    
+            <!--<Button x:Name="btnReporte" Content="Reporte" HorizontalAlignment="Left" Margin="461,10,0,0" VerticalAlignment="Top" Width="74" />
 
                     
             <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="46,60,0,0" VerticalAlignment="Top" Width="120"/>
@@ -228,9 +229,10 @@
                     </DataGrid>-->
             
 
+
                 </Grid>
             </Controls:Flyout>
-            <Controls:Flyout x:Name="FlyPerfil" Position="Right" Header="Perfil Usuario" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="538" Margin="-1,0,0,0">
+            <Controls:Flyout x:Name="FlyPerfil" Position="Right" Header="Perfil Usuario" Opacity="0.9" Background="Black" Foreground="#FFFDFDFD" HorizontalAlignment="Left" Width="684">
                 <Grid>
                     <Label x:Name="label" Content="Datos Personales" Foreground="White" HorizontalAlignment="Left" Margin="20,14,0,0" VerticalAlignment="Top"/>
                     <Label x:Name="label_Copy" Foreground="White" HorizontalAlignment="Left" Margin="159,197,0,0" VerticalAlignment="Top"/>
