--- a/Core.DALC/QOfreces.WPF/ReportValoraciones.xaml
+++ b/Core.DALC/QOfreces.WPF/ReportValoraciones.xaml
@@ -1,12 +1,18 @@
-﻿<Window x:Class="QOfreces.WPF.ReportValoraciones"
+﻿<Controls:MetroWindow x:Class="QOfreces.WPF.ReportValoraciones"
+        xmlns:rv="clr-namespace:Microsoft.Reporting.WinForms;assembly=Microsoft.ReportViewer.WinForms"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QOfreces.WPF"
-        xmlns:rv="clr-namespace:Microsoft.Reporting.WinForms;assembly=Microsoft.ReportViewer.WinForms" 
+        xmlns:behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        Icon="img/logo.png"
+        BorderBrush="{DynamicResource AccentColorBrush}"
+        BorderThickness="1"
         mc:Ignorable="d"
-        Title="ReportValoraciones" Height="378.261" Width="737.046">
+        x:Name="MenuGerencia" Height="730" Width="850" Background="Black" WindowStartupLocation="CenterScreen" MinWidth="850" MinHeight="730" MaxWidth="850" MaxHeight="730">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="17*"/>
@@ -20,4 +26,4 @@
         <Button x:Name="btnFiltrar" Content="Filtrar" HorizontalAlignment="Left" Margin="443,4,0,0" VerticalAlignment="Top" Width="86" Click="btnFiltrar_Click" Height="26" Grid.Column="1"/>
         <Label x:Name="label" Content="Rango Fecha Oferta" HorizontalAlignment="Left" Margin="28,4,0,0" VerticalAlignment="Top"/>
     </Grid>
-</Window>
+</Controls:MetroWindow>
